# pytorch-sample

./: .gitignore  README.md  environment.yaml
mnist/: main.py  pyproject.toml
